- Info Window - Clusters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="category_ktx">Kotlin extension functions</string>
     <string name="category_markerview">View synchronisation</string>
     <string name="category_scalebar">Scalebar</string>
+    <string name="category_clustering">Clustering</string>
 
     <!-- Titles -->
     <string name="title_traffic">Traffic Plugin</string>
@@ -42,6 +43,10 @@
     <string name="title_markerview">MarkerView plugin</string>
     <string name="title_ktx">Mapbox Maps KTX</string>
     <string name="title_scalebar">Scale bar</string>
+    <string name="title_clustering">Clustering</string>
+    <string name="title_info_window">Info Window</string>
+    <string name="title_dynamic_info_window">Dynamic Info Window</string>
+    <string name="title_adapter_info_window">Adapter Info Window</string>
 
     <!-- Descriptions -->
     <string name="description_traffic">Add Traffic layers to any Mapbox basemap.</string>
@@ -67,6 +72,10 @@
     <string name="description_markerview">Synchronise a view on a map</string>
     <string name="description_ktx">Test Mapbox Maps SDK for Android Kotlin extension functions</string>
     <string name="description_scalebar">Show scale bar on a map</string>
+    <string name="description_clustering">Show clusters on a map</string>
+    <string name="description_info_window">Info Window on a map</string>
+    <string name="description_dynamic_info_window">Dynamic Info Window on a map</string>
+    <string name="description_adapter_info_window">Adapter Info Window on a map</string>
 
     <!-- Place picker -->
     <string name="detailed_description_place_picker">Example shows how to launch the Place Picker using the Floating action button and receiving a result in onActivityResult.</string>
