--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="title_dynamic_info_window">Dynamic Info Window</string>
     <string name="title_adapter_info_window">Adapter Info Window</string>
     <string name="title_adapter_mapillary">Adapter Symbol Layer Mapillary</string>
+    <string name="title_animate_marker">Animate Marker On Map</string>
+    <string name="title_symbol_listener">Click Marker on map</string>
 
     <!-- Descriptions -->
     <string name="description_traffic">Add Traffic layers to any Mapbox basemap.</string>
@@ -79,6 +81,8 @@
     <string name="description_dynamic_info_window">Dynamic Info Window on a map</string>
     <string name="description_adapter_info_window">Adapter Info Window on a map</string>
     <string name="description_adapter_mapillary">Adapter Symbol Layer Mapillary</string>
+    <string name="description_animate_marker">Animate Marker On Map</string>
+    <string name="description_symbol_listener">Symbol Click Example</string>
 
     <!-- Place picker -->
     <string name="detailed_description_place_picker">Example shows how to launch the Place Picker using the Floating action button and receiving a result in onActivityResult.</string>
@@ -93,4 +97,8 @@
     <string name="change_language_instruction">Make sure that the device\'s default language is not English</string>
     <string name="map_not_localized">Map not localized to device language and now set to French</string>
     <string name="map_localized">Map localized to device language</string>
+    <string name="tap_on_map_instruction">Tap anywhere on the map</string>
+    <string name="clicked_symbol_toast">Symbol Clicked</string>
+    <string name="long_clicked_symbol_toast">Symbol Long clicked</string>
+    <string name="symbol_listener_instruction_toast">Click and Long click on icon</string>
 </resources>
